fixed issue of cards adding odd spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,10 @@
   margin-bottom: 1.5em;
 }
 
+.card {
+  min-height: 750px
+}
+
 .miniLogo {
   max-width: 45px;
   height: auto;
